; ModuleID = '/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_get_arg.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_get_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_parse_context = type { i32*, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nn_parse_context*)* @nn_get_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nn_get_arg(%struct.nn_parse_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nn_parse_context*, align 8
  store %struct.nn_parse_context* %0, %struct.nn_parse_context** %3, align 8
  %4 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %5 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

9:                                                ; preds = %1
  %10 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %11 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = sub nsw i64 %12, 1
  store i64 %13, i64* %11, align 8
  %14 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %15 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  store i32* %17, i32** %15, align 8
  %18 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %19 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %23 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 8
  store i32 1, i32* %2, align 4
  br label %24

24:                                               ; preds = %9, %8
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
